[package]
name = "json-pest-parser"
version = "0.3.0"
authors = ["elois <elois@duniter.org>"]
description = "Parse JSON with pest grammar."
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["json", "pest", "parser"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
thiserror = "1.0.20"
unwrap = "1.2.1"

[dev-dependencies]
pretty_assertions = "0.6.1"